metadata/force-app/main/default/objects/CampaignMember/fields/On24_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>On24_Campaign_Code__c</fullName>
    <label>On24 Campaign Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>