metadata/force-app/main/default/objects/CampaignMember/fields/On24_Certification_Credit__c.field-meta.xml
<CustomField>
    <fullName>On24_Certification_Credit__c</fullName>
    <description>NR (no credits configured) or hours specified in Credit for Completion in certification widget</description>
    <label>On24 Certification Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>