metadata/force-app/main/default/objects/CampaignMember/fields/On24_Certification_Result__c.field-meta.xml
<CustomField>
    <fullName>On24_Certification_Result__c</fullName>
    <description>C= Certified, PC: Partially certified, NC: Not certified</description>
    <label>On24 Certification Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>