metadata/force-app/main/default/objects/CampaignMember/fields/On24_Certification_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>On24_Certification_Timestamp__c</fullName>
    <description>Date and time user successfully passed certification widget</description>
    <label>On24 Certification Timestamp</label>
    <type>DateTime</type>
</CustomField>