metadata/force-app/main/default/objects/CampaignMember/fields/On24_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>On24_Client_ID__c</fullName>
    <description>ID of client account</description>
    <label>On24 Client ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>