metadata/force-app/main/default/objects/CampaignMember/fields/On24_CTA_Date_2__c.field-meta.xml
<CustomField>
    <fullName>On24_CTA_Date_2__c</fullName>
    <label>On24 CTA Date 2</label>
    <type>DateTime</type>
</CustomField>