metadata/force-app/main/default/objects/CampaignMember/fields/On24_CTA_Name_1__c.field-meta.xml
<CustomField>
    <fullName>On24_CTA_Name_1__c</fullName>
    <description>Display name of CTA widget</description>
    <label>On24 CTA Name 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>