metadata/force-app/main/default/objects/CampaignMember/fields/On24_CTA_Name_2__c.field-meta.xml
<CustomField>
    <fullName>On24_CTA_Name_2__c</fullName>
    <label>On24 CTA Name 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>