metadata/force-app/main/default/objects/CampaignMember/fields/On24_Cumulative_Live_Minutes__c.field-meta.xml
<CustomField>
    <fullName>On24_Cumulative_Live_Minutes__c</fullName>
    <label>On24 Cumulative Live Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>