metadata/force-app/main/default/objects/CampaignMember/fields/On24_Demo_Widget_Name__c.field-meta.xml
<CustomField>
    <fullName>On24_Demo_Widget_Name__c</fullName>
    <description>User defined name</description>
    <label>On24 Demo Widget Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>