metadata/force-app/main/default/objects/CampaignMember/fields/On24_Demo_Widget_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>On24_Demo_Widget_Timestamp__c</fullName>
    <description>Demo timestamp</description>
    <label>On24 Demo Widget Timestamp</label>
    <type>DateTime</type>
</CustomField>