metadata/force-app/main/default/objects/CampaignMember/fields/On24_Demo_Widget_Type__c.field-meta.xml
<CustomField>
    <fullName>On24_Demo_Widget_Type__c</fullName>
    <description>Always &quot;request_a_demo&quot;</description>
    <label>On24 Demo Widget Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>