metadata/force-app/main/default/objects/CampaignMember/fields/On24_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>On24_Engagement_Score__c</fullName>
    <description>This is a number between 0 and 10.0 measuring how engaged a user was based on activity during the event</description>
    <label>On24 Engagement Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>