metadata/force-app/main/default/objects/CampaignMember/fields/On24_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>On24_Event_Time__c</fullName>
    <label>On24 Event Time</label>
    <type>DateTime</type>
</CustomField>