metadata/force-app/main/default/objects/CampaignMember/fields/On24_Event_Title__c.field-meta.xml
<CustomField>
    <fullName>On24_Event_Title__c</fullName>
    <label>On24 Event Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>