metadata/force-app/main/default/objects/CampaignMember/fields/On24_External_Event_User_ID__c.field-meta.xml
<CustomField>
    <fullName>On24_External_Event_User_ID__c</fullName>
    <description>Hidden registration field typically used to store external platform IDs</description>
    <label>On24 External Event User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>