metadata/force-app/main/default/objects/CampaignMember/fields/On24_First_Archive_Activity__c.field-meta.xml
<CustomField>
    <fullName>On24_First_Archive_Activity__c</fullName>
    <label>On24 First Archive Activity</label>
    <type>DateTime</type>
</CustomField>