metadata/force-app/main/default/objects/CampaignMember/fields/On24_First_Live_Activity__c.field-meta.xml
<CustomField>
    <fullName>On24_First_Live_Activity__c</fullName>
    <label>On24 First Live Activity</label>
    <type>DateTime</type>
</CustomField>