metadata/force-app/main/default/objects/CampaignMember/fields/On24_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>On24_Last_Activity__c</fullName>
    <description>Date and time of last live or archive/on-demand activity</description>
    <label>On24 Last Activity</label>
    <type>DateTime</type>
</CustomField>