metadata/force-app/main/default/objects/CampaignMember/fields/On24_Last_Archive_Activity__c.field-meta.xml
<CustomField>
    <fullName>On24_Last_Archive_Activity__c</fullName>
    <label>On24 Last Archive Activity</label>
    <type>DateTime</type>
</CustomField>