metadata/force-app/main/default/objects/CampaignMember/fields/On24_Live_Viewed__c.field-meta.xml
<CustomField>
    <fullName>On24_Live_Viewed__c</fullName>
    <description>Number of times the attendee launched the event console during the live event.</description>
    <label>On24 Live Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>