metadata/force-app/main/default/objects/CampaignMember/fields/On24_Meeting_Widget_Action__c.field-meta.xml
<CustomField>
    <fullName>On24_Meeting_Widget_Action__c</fullName>
    <description>Meeting action (e.g. URL of external link)</description>
    <label>On24 Meeting Widget Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>