metadata/force-app/main/default/objects/CampaignMember/fields/On24_Meeting_Widget_Submitted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>On24_Meeting_Widget_Submitted_Timestamp__c</fullName>
    <description>Meeting submited timestamp</description>
    <label>On24 Meeting Widget Submitted Timestamp</label>
    <type>DateTime</type>
</CustomField>