metadata/force-app/main/default/objects/CampaignMember/fields/On24_Meeting_Widget_Type__c.field-meta.xml
<CustomField>
    <fullName>On24_Meeting_Widget_Type__c</fullName>
    <description>Always &quot;book_a_meeting&quot;</description>
    <label>On24 Meeting Widget Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>