metadata/force-app/main/default/objects/CampaignMember/fields/On24_Number_of_Asked_Questions__c.field-meta.xml
<CustomField>
    <fullName>On24_Number_of_Asked_Questions__c</fullName>
    <description>Number of questions the user asked</description>
    <label>On24 Number of Asked Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>