metadata/force-app/main/default/objects/CampaignMember/fields/On24_Partner_Ref__c.field-meta.xml
<CustomField>
    <fullName>On24_Partner_Ref__c</fullName>
    <description>Variable campaign identifier</description>
    <label>On24 Partner Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>