metadata/force-app/main/default/objects/CampaignMember/fields/On24_Poll_Question_3__c.field-meta.xml
<CustomField>
    <fullName>On24_Poll_Question_3__c</fullName>
    <label>On24 Poll Question 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>