metadata/force-app/main/default/objects/CampaignMember/fields/On24_Resource_Viewed_1__c.field-meta.xml
<CustomField>
    <fullName>On24_Resource_Viewed_1__c</fullName>
    <label>On24 Resource Viewed 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>