metadata/force-app/main/default/objects/CampaignMember/fields/On24_Source_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>On24_Source_Campaign_Code__c</fullName>
    <description>Campaign Code captured if registrant originated from Ehub</description>
    <label>On24 Source Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>