metadata/force-app/main/default/objects/CampaignMember/fields/On24_Survey_Answer_2__c.field-meta.xml
<CustomField>
    <fullName>On24_Survey_Answer_2__c</fullName>
    <label>On24 Survey Answer 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>