metadata/force-app/main/default/objects/CampaignMember/fields/On24_Survey_Question_1__c.field-meta.xml
<CustomField>
    <fullName>On24_Survey_Question_1__c</fullName>
    <label>On24 Survey Question 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>