metadata/force-app/main/default/objects/CampaignMember/fields/On24_Test_Widget_Result__c.field-meta.xml
<CustomField>
    <fullName>On24_Test_Widget_Result__c</fullName>
    <description>Did not attempt, Passed, Failed</description>
    <label>On24 Test Widget Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>