metadata/force-app/main/default/objects/CampaignMember/fields/On24_Total_Resources_Viewed__c.field-meta.xml
<CustomField>
    <fullName>On24_Total_Resources_Viewed__c</fullName>
    <label>On24 Total Resources Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>