metadata/force-app/main/default/objects/CampaignMember/fields/On24_User_Answer_1__c.field-meta.xml
<CustomField>
    <fullName>On24_User_Answer_1__c</fullName>
    <description>Presenter response to user submitted question through Q&amp;A widget</description>
    <label>On24 User Answer 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>