metadata/force-app/main/default/objects/CampaignMember/fields/On24_User_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>On24_User_Profile_URL__c</fullName>
    <description>URL for Prospect Engagement Profile</description>
    <label>On24 User Profile URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>