metadata/force-app/main/default/objects/CampaignMember/fields/Opp_to_Demo__c.field-meta.xml
<CustomField>
    <fullName>Opp_to_Demo__c</fullName>
    <description>wd field</description>
    <formula>Demo_Date__c - FCR_SQR_Date__c</formula>
    <label>Opp to Demo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>