metadata/force-app/main/default/objects/CampaignMember/fields/PPC_Campaign_Medium_c__c.field-meta.xml
<CustomField>
    <fullName>PPC_Campaign_Medium_c__c</fullName>
    <description>wd field</description>
    <label>PPC Campaign Medium</label>
    <type>TextArea</type>
</CustomField>