metadata/force-app/main/default/objects/CampaignMember/fields/PPC_CampaignID_c__c.field-meta.xml
<CustomField>
    <fullName>PPC_CampaignID_c__c</fullName>
    <description>wd field</description>
    <label>PPC CampaignID</label>
    <type>TextArea</type>
</CustomField>