metadata/force-app/main/default/objects/CampaignMember/fields/PPC_Content_c__c.field-meta.xml
<CustomField>
    <fullName>PPC_Content_c__c</fullName>
    <description>wd field</description>
    <label>PPC Content</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>