metadata/force-app/main/default/objects/CampaignMember/fields/Prop__c.field-meta.xml
<CustomField>
    <fullName>Prop__c</fullName>
    <description>wd field</description>
    <formula>IF(NOT(ISBLANK(Prop_Date__c)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prop</label>
    <type>Checkbox</type>
</CustomField>