metadata/force-app/main/default/objects/CampaignMember/fields/Prop_Date__c.field-meta.xml
<CustomField>
    <fullName>Prop_Date__c</fullName>
    <description>wd field</description>
    <formula>FCR_Opportunity__r.Prop_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prop Date</label>
    <type>Date</type>
</CustomField>