metadata/force-app/main/default/objects/CampaignMember/fields/Prop_to_VOC__c.field-meta.xml
<CustomField>
    <fullName>Prop_to_VOC__c</fullName>
    <description>wd field
Used by FCI</description>
    <formula>VOC_Date__c - Prop_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># Days from VOC to Prop- Evaluates to blank if Working Date is blank.</inlineHelpText>
    <label>Prop to VOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>