metadata/force-app/main/default/objects/CampaignMember/fields/Recycled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recycled_Reason__c</fullName>
    <description>wd field
Synced from Lead / Contact</description>
    <inlineHelpText>Synced form Lead / Contact Recycled</inlineHelpText>
    <label>Recycled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Already Has DAM &amp; Satisfied</fullName>
            </value>
            <value>
                <fullName>Auto-Recycled</fullName>
            </value>
            <value>
                <fullName>Could Not Connect</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Not a Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>