metadata/force-app/main/default/objects/CampaignMember/fields/SAL_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_Date__c</fullName>
    <description>wd field
Used by FCI</description>
    <inlineHelpText>Sales Accepted Date</inlineHelpText>
    <label>SAL Date</label>
    <type>Date</type>
</CustomField>