metadata/force-app/main/default/objects/CampaignMember/fields/SAL_to_Opp__c.field-meta.xml
<CustomField>
    <fullName>SAL_to_Opp__c</fullName>
    <description>wd field
Used by FCI</description>
    <formula>FCR_SQR_Date__c - SAL_Date__c</formula>
    <inlineHelpText># Days from SAL to Opp - Evaluates to blank if SAL Date is blank.</inlineHelpText>
    <label>SAL to Opp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>