metadata/force-app/main/default/objects/CampaignMember/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <description>sales region from lead or contact</description>
    <formula>IF( ISBLANK(ContactId), Text(Lead__r.Sales_Region__c) , Contact.Sales_Region_NEW__c )</formula>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>