metadata/force-app/main/default/objects/CampaignMember/fields/Sales_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Subregion__c</fullName>
    <description>sales subregion from lead or contact</description>
    <formula>IF( ISBLANK(ContactId), Text(Lead__r.Sales_Subregion__c) ,Text(Contact.Sales_Subregion__c))</formula>
    <label>Sales Subregion</label>
    <type>Text</type>
</CustomField>