metadata/force-app/main/default/objects/CampaignMember/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <description>BODEV-2393 include fileds un campaign with campaign members reporting</description>
    <formula>IF( NOT(ISBLANK(ContactId)), text(Contact.Seniority__c),   
text(Lead.Seniority__c))</formula>
    <label>Seniority</label>
    <type>Text</type>
</CustomField>