metadata/force-app/main/default/objects/CampaignMember/fields/SQL_to_Opp__c.field-meta.xml
<CustomField>
    <fullName>SQL_to_Opp__c</fullName>
    <description>wd field</description>
    <formula>FCR_SQR_Date__c - FCR_SAR_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SQL to Opp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>