metadata/force-app/main/default/objects/CampaignMember/fields/SQL_to_SAL__c.field-meta.xml
<CustomField>
    <fullName>SQL_to_SAL__c</fullName>
    <description>wd field
Used by FCI</description>
    <formula>SAL_Date__c - FCR_SAR_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># Days from SQL to SAL - Evaluates to blank if SQL Date is blank.</inlineHelpText>
    <label>SQL to SAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>