metadata/force-app/main/default/objects/CampaignMember/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>BODEV-2393 include fileds un campaign with campaign members reporting</description>
    <formula>IF( NOT(ISBLANK(ContactId)), text(Contact.Status__c),
text(Lead.Status))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>