metadata/force-app/main/default/objects/CampaignMember/fields/Still_in_Demo__c.field-meta.xml
<CustomField>
    <fullName>Still_in_Demo__c</fullName>
    <description>wd field
Checked if Current Stage in Funnel is 6. Demo</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = &quot;6. Demo&quot;</formula>
    <inlineHelpText>Used by FCI</inlineHelpText>
    <label>Still in Demo</label>
    <type>Checkbox</type>
</CustomField>