metadata/force-app/main/default/objects/CampaignMember/fields/Still_in_Neg__c.field-meta.xml
<CustomField>
    <fullName>Still_in_Neg__c</fullName>
    <description>wd field
Used by FCI</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = &quot;9. Neg&quot;</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is 9. Neg</inlineHelpText>
    <label>Still in Neg</label>
    <type>Checkbox</type>
</CustomField>