metadata/force-app/main/default/objects/CampaignMember/fields/Still_in_Opp__c.field-meta.xml
<CustomField>
    <fullName>Still_in_Opp__c</fullName>
    <description>wd field</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = &quot;5. Opp&quot;</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is 5.Opp</inlineHelpText>
    <label>Still in Opp</label>
    <type>Checkbox</type>
</CustomField>