metadata/force-app/main/default/objects/CampaignMember/fields/Still_in_Prop__c.field-meta.xml
<CustomField>
    <fullName>Still_in_Prop__c</fullName>
    <description>wd field
Used by FCI</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = &quot;7. Prop&quot;</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is 7.Proposal</inlineHelpText>
    <label>Still in Prop</label>
    <type>Checkbox</type>
</CustomField>