metadata/force-app/main/default/objects/CampaignMember/fields/Still_in_VOC__c.field-meta.xml
<CustomField>
    <fullName>Still_in_VOC__c</fullName>
    <description>wd field
Used by FCI</description>
    <formula>CFCR_Current_Stage_in_Funnel__c = &quot;8. VOC&quot;</formula>
    <inlineHelpText>Checked if Current Stage in Funnel is 8. VOC</inlineHelpText>
    <label>Still in VOC</label>
    <type>Checkbox</type>
</CustomField>