metadata/force-app/main/default/objects/CampaignMember/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>Contact.Account.Current_MRR_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>