metadata/force-app/main/default/objects/CampaignMember/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <description>wd field</description>
    <formula>IF(NOT(ISBLANK(Trial_Date__c)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Trial</label>
    <type>Checkbox</type>
</CustomField>