metadata/force-app/main/default/objects/CampaignMember/fields/Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Date__c</fullName>
    <description>wd field</description>
    <formula>/* Deleted this formula and set the value as blank as opportunity is deleted FCR_Opportunity__r.Trial_Start_Date__c */

DATEVALUE(&quot;&quot;)</formula>
    <label>Trial Date</label>
    <type>Date</type>
</CustomField>