metadata/force-app/main/default/objects/CampaignMember/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <description>wd field (+B values)</description>
    <inlineHelpText>Synced from Lead/ Contact Unqualified Reason</inlineHelpText>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wrong contact data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>VASP lead</fullName>
            </value>
            <value>
                <fullName>Job applicant</fullName>
            </value>
            <value>
                <fullName>No company</fullName>
            </value>
            <value>
                <fullName>Bad Data</fullName>
            </value>
            <value>
                <fullName>International (outside target market)</fullName>
            </value>
            <value>
                <fullName>Size of Organization</fullName>
            </value>
            <value>
                <fullName>Wrong Product Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>