metadata/force-app/main/default/objects/CampaignMember/fields/VOC__c.field-meta.xml
<CustomField>
    <fullName>VOC__c</fullName>
    <description>wd field</description>
    <formula>IF(NOT(ISBLANK(VOC_Date__c)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOC</label>
    <type>Checkbox</type>
</CustomField>