metadata/force-app/main/default/objects/CampaignMember/fields/VOC_Date__c.field-meta.xml
<CustomField>
    <fullName>VOC_Date__c</fullName>
    <description>wd field</description>
    <formula>FCR_Opportunity__r.VOC_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOC Date</label>
    <type>Date</type>
</CustomField>