metadata/force-app/main/default/objects/CampaignMember/fields/VOC_to_Neg__c.field-meta.xml
<CustomField>
    <fullName>VOC_to_Neg__c</fullName>
    <description>wd field
Used by FCI</description>
    <formula>Neg_Date__c - VOC_Date__c</formula>
    <inlineHelpText># Days from VOC to Negotiations - Evaluates to blank if VOC Date is blank.</inlineHelpText>
    <label>VOC to Neg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>